Make scan histogram versatile - intensity, mz, mass defect