@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2020 The MZmine Development Team
+ * Copyright 2006-2022 The MZmine Development Team
  *
  * This file is part of MZmine.
  *
@@ -8,36 +8,41 @@
  * License, or (at your option) any later version.
  *
  * MZmine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
- * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
- * Public License for more details.
+ * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License along with MZmine; if not,
- * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
+ * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ *
  */
 
 package io.github.mzmine.modules.visualization.mzhistogram.chart;
 
 import com.google.common.collect.Range;
 import io.github.msdk.MSDKRuntimeException;
-import io.github.mzmine.datamodel.DataPoint;
-import io.github.mzmine.datamodel.Frame;
 import io.github.mzmine.datamodel.IMSRawDataFile;
-import io.github.mzmine.datamodel.MassList;
-import io.github.mzmine.datamodel.MobilityScan;
 import io.github.mzmine.datamodel.RawDataFile;
 import io.github.mzmine.datamodel.Scan;
+import io.github.mzmine.datamodel.data_access.EfficientDataAccess;
+import io.github.mzmine.datamodel.data_access.EfficientDataAccess.MobilityScanDataType;
+import io.github.mzmine.datamodel.data_access.EfficientDataAccess.ScanDataType;
+import io.github.mzmine.datamodel.data_access.MobilityScanDataAccess;
+import io.github.mzmine.datamodel.data_access.ScanDataAccess;
 import io.github.mzmine.datamodel.features.FeatureList;
 import io.github.mzmine.gui.mainwindow.MZmineTab;
+import io.github.mzmine.modules.visualization.mzhistogram.ScanHistogramType;
 import io.github.mzmine.modules.visualization.mzhistogram.ScanMzHistogramParameters;
 import io.github.mzmine.parameters.ParameterSet;
+import io.github.mzmine.parameters.parametertypes.massdefect.MassDefectFilter;
 import io.github.mzmine.parameters.parametertypes.selectors.ScanSelection;
-import io.github.mzmine.util.RangeUtils;
 import it.unimi.dsi.fastutil.doubles.DoubleArrayList;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 import javafx.scene.layout.BorderPane;
+import org.apache.commons.collections4.CollectionUtils;
 import org.jetbrains.annotations.NotNull;
 import org.jfree.chart.fx.ChartViewer;
 import org.jfree.chart.plot.XYPlot;
@@ -51,31 +56,21 @@ public class HistogramTab extends MZmineTab {
 
   //private final Scene mainScene;
   private final BorderPane mainPane;
-  protected HistogramPanel histo;
-  private RawDataFile dataFile;
-
-  // scan counter
-  private int processedScans, totalScans;
-
   // parameters
   private final ScanSelection scanSelection;
-  private Scan[] scans;
   private final Range<Double> mzRange;
-  private Range<Float> rtRange;
-  private final Boolean useRTRange;
   private final boolean useMobilityScans;
   private final double binWidth;
-
+  private final ScanHistogramType valueType;
+  private final Range<Double> intensityRange;
+  private final Boolean useIntensityRange;
+  private final MassDefectFilter massDefectFilter;
+  private final Boolean useMassDefect;
+  protected HistogramPanel histo;
+  private RawDataFile[] dataFiles;
+  // scan counter
+  private int processedScans, totalScans;
   private HistogramData data;
-
-  /**
-   * Create the dialog. Auto detect binWidth
-   *
-   * @wbp.parser.constructor
-   */
-  //public HistogramTab(RawDataFile dataFile, String title, String xLabel, HistogramData data) {
-  //  this(dataFile, title, xLabel, data, 0);
-  //}
 
   /**
    * @param dataFile   rawDataFile
@@ -83,23 +78,24 @@ public class HistogramTab extends MZmineTab {
    * @param xLabel     xLabel
    * @param parameters parameters
    */
-  public HistogramTab(RawDataFile dataFile, String title, String xLabel, ParameterSet parameters) {
+  public HistogramTab(String title, String xLabel, ParameterSet parameters,
+      RawDataFile... dataFile) {
     super(title, true, false);
     //setTitle(title);
 
-    this.dataFile = dataFile;
-    scanSelection = parameters.getParameter(ScanMzHistogramParameters.scanSelection).getValue();
+    this.dataFiles = dataFile;
+    scanSelection = parameters.getValue(ScanMzHistogramParameters.scanSelection);
 
-    mzRange = parameters.getParameter(ScanMzHistogramParameters.mzRange).getValue();
-    useRTRange = parameters.getParameter(ScanMzHistogramParameters.rtRange).getValue();
-    if (useRTRange) {
-      rtRange = RangeUtils
-          .toFloatRange(parameters.getParameter(ScanMzHistogramParameters.rtRange)
-              .getEmbeddedParameter().getValue());
-    }
-    binWidth = parameters.getParameter(ScanMzHistogramParameters.binWidth).getValue();
-    useMobilityScans = parameters.getParameter(ScanMzHistogramParameters.useMobilityScans)
-        .getValue();
+    mzRange = parameters.getValue(ScanMzHistogramParameters.mzRange);
+    binWidth = parameters.getValue(ScanMzHistogramParameters.binWidth);
+    useMobilityScans = parameters.getValue(ScanMzHistogramParameters.useMobilityScans);
+    useIntensityRange = parameters.getValue(ScanMzHistogramParameters.heightRange);
+    intensityRange = parameters.getParameter(ScanMzHistogramParameters.heightRange)
+        .getEmbeddedParameter().getValue();
+    useMassDefect = parameters.getValue(ScanMzHistogramParameters.massDefect);
+    massDefectFilter = parameters.getParameter(ScanMzHistogramParameters.massDefect)
+        .getEmbeddedParameter().getValue();
+    valueType = parameters.getValue(ScanMzHistogramParameters.type);
 
     data = buildHistogramData(dataFile);
 
@@ -124,48 +120,29 @@ public class HistogramTab extends MZmineTab {
     //addKeyBindings();
   }
 
-  private HistogramData buildHistogramData(RawDataFile dataFile) {
-    logger.info("Starting to build mz distribution histogram for " + dataFile);
-
-    // all selected scans
-    scans = scanSelection.getMatchingScans(dataFile);
-    totalScans = scans.length;
+  private HistogramData buildHistogramData(RawDataFile... dataFiles) {
+    logger.info("Starting to build mz distribution histogram for " + Arrays.stream(dataFiles)
+        .map(Object::toString).collect(Collectors.joining(",")));
 
     // histo data
     DoubleArrayList data = new DoubleArrayList();
 
-    for (Scan scan : scans) {
-
-      // retention time in range
-      if (!useRTRange || rtRange.contains(scan.getRetentionTime())) {
-
-        if (scan.getDataFile() instanceof IMSRawDataFile && useMobilityScans
-            && scan instanceof Frame) {
-          for (MobilityScan mobilityScan : ((Frame) scan).getMobilityScans()) {
-            // go through all mass lists
-            MassList massList = mobilityScan.getMassList();
-            if (massList == null) {
-              throw new NullPointerException("Scan " + dataFile + " #" + scan.getScanNumber()
-                                             + " does not have a mass list");
-            }
-            DataPoint[] mzValues = massList.getDataPoints();
-
-            // insert all mz in order and count them
-            Arrays.stream(mzValues).mapToDouble(dp -> dp.getMZ()).filter(mz -> mzRange.contains(mz))
-                .forEach(mz -> data.add(mz));
+    for (RawDataFile dataFile : dataFiles) {
+      if (dataFile instanceof IMSRawDataFile ims && useMobilityScans) {
+        MobilityScanDataAccess scanAccess = EfficientDataAccess.of(ims,
+            MobilityScanDataType.CENTROID, scanSelection);
+        totalScans = scanAccess.getNumberOfScans();
+        while (scanAccess.nextFrame() != null) {
+          while (scanAccess.nextMobilityScan() != null) {
+            addAllDataPoints(scanAccess, data);
           }
-        } else {
-          // go through all mass lists
-          MassList massList = scan.getMassList();
-          if (massList == null) {
-            throw new NullPointerException("Scan " + dataFile + " #" + scan.getScanNumber()
-                                           + " does not have a mass list");
-          }
-          DataPoint[] mzValues = massList.getDataPoints();
-
-          // insert all mz in order and count them
-          Arrays.stream(mzValues).mapToDouble(dp -> dp.getMZ()).filter(mz -> mzRange.contains(mz))
-              .forEach(mz -> data.add(mz));
+        }
+      } else {
+        ScanDataAccess scanAccess = EfficientDataAccess.of(dataFile, ScanDataType.CENTROID,
+            scanSelection);
+        totalScans = scanAccess.getNumberOfScans();
+        while (scanAccess.nextScan() != null) {
+          addAllDataPoints(scanAccess, data);
           processedScans++;
         }
       }
@@ -176,6 +153,24 @@ public class HistogramTab extends MZmineTab {
       return new HistogramData(data.toDoubleArray());
     } else {
       throw new MSDKRuntimeException("Data was empty. Review your selected filters.");
+    }
+  }
+
+  private void addAllDataPoints(Scan scan, DoubleArrayList data) {
+    // is already a ScanDataAccess or mobilityScanAccess
+    int n = scan.getNumberOfDataPoints();
+    for (int i = 0; i < n; i++) {
+      double mz = scan.getMzValue(i);
+      double intensity = scan.getIntensityValue(i);
+      if (mzRange.contains(mz) && (!useIntensityRange || intensityRange.contains(intensity)) && (
+          !useMassDefect || massDefectFilter.contains(mz))) {
+        double val = switch (valueType) {
+          case MZ -> mz;
+          case INTENSITY -> intensity;
+          case MASS_DEFECT -> mz - Math.floor(mz);
+        };
+        data.add(val);
+      }
     }
   }
 
@@ -207,7 +202,7 @@ public class HistogramTab extends MZmineTab {
   @NotNull
   @Override
   public Collection<? extends RawDataFile> getRawDataFiles() {
-    return new ArrayList<>(Collections.singletonList(dataFile));
+    return List.of(dataFiles);
   }
 
   @NotNull
@@ -224,20 +219,16 @@ public class HistogramTab extends MZmineTab {
 
   @Override
   public void onRawDataFileSelectionChanged(Collection<? extends RawDataFile> rawDataFiles) {
-    if (rawDataFiles == null || rawDataFiles.isEmpty()) {
+    if (rawDataFiles == null || rawDataFiles.isEmpty() || CollectionUtils.isEqualCollection(
+        rawDataFiles, getRawDataFiles())) {
       return;
     }
 
-    // get first raw data file
-    RawDataFile newFile = rawDataFiles.iterator().next();
-    if (dataFile.equals(newFile)) {
-      return;
-    }
-
-    HistogramData newData = buildHistogramData(newFile);
+    RawDataFile[] newFiles = rawDataFiles.toArray(RawDataFile[]::new);
+    HistogramData newData = buildHistogramData(newFiles);
     histo.setData(newData, binWidth);
+    dataFiles = newFiles;
 
-    dataFile = newFile;
     data = newData;
   }
 
@@ -247,8 +238,7 @@ public class HistogramTab extends MZmineTab {
   }
 
   @Override
-  public void onAlignedFeatureListSelectionChanged(
-      Collection<? extends FeatureList> featureLists) {
+  public void onAlignedFeatureListSelectionChanged(Collection<? extends FeatureList> featureLists) {
 
   }
 }
